--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <h2> I'm a Web Developer</h2>
     <hr />
     <h3><a href="./public/movie-ranking.html "> Movie Ranking Project </a></h3>
-    <img src="./assets/images/series-ranking.png" height="200" alt="movie ranking project preview"/>
+    <img src="./assets/images/Ranking.png" height="200" alt="movie ranking project preview"/>
 
     <h3> <a href="./public/birthday-invite.html"> Birthday Invitation Project </a></h3>
     <img src="./assets/images/birthday.png" height="200" alt=" birthday invite project preview"/>
